[package]
name = "ssml"
version = "0.1.0"
description = "Utilities for working with Speech Synthesis Markup Language documents"
license = "Apache-2.0"
authors = [ "Carson M <carson@pyke.io>" ]
edition = "2021"
repository = "https://github.com/pykeio/ssml"

[dependencies]
dyn-clone = "1.0"
serde = { version = "1.0", optional = true, default-features = false, features = [ "alloc", "derive" ] }
erased-serde = { version = "0.4", optional = true, default-features = false, features = [ "alloc" ] }

[features]
default = [ "std" ]
std = []
serde = [ "dep:serde", "dep:erased-serde" ]
