[package]
name = "ssml"
version = "0.2.0"
description = "Utilities for working with Speech Synthesis Markup Language documents"
license = "Apache-2.0"
authors = [ "Carson M <carson@pyke.io>" ]
edition = "2021"
repository = "https://github.com/pykeio/ssml"

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = [ "alloc", "derive" ] }

[features]
default = [ "std" ]
std = []
serde = [ "dep:serde" ]
